Improve pagination, and fix scrollbars

--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -9,5 +9,5 @@ html, body, #root {
 
 .App {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
